--- a/style.css
+++ b/style.css
@@ -2507,17 +2507,10 @@ html {
  
     background-size: cover;
     background-repeat: no-repeat;
-    
+    width: 100%;
+	height: 150vh;
 }
 
-.signup {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh; 
-  padding: 1rem 0.5rem;
-}
 .signup h2{
     text-align: center;
 }
@@ -2526,31 +2519,24 @@ html {
     text-align: center;
 }
 
-.signup section {
-    width: 400px;
-    max-width: 420px;
-    min-height: 400px;
-    display: flex;
+.signup .signup_sec{
+    width: 70%;
     border-radius: 8%;
-    flex-direction: column;
-    justify-content: flex-start;
     padding: 1rem;
     background: #242943;
 
 }
 
 .signup form {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    flex-grow: 1;
     padding-bottom: 1rem;
 }
 
 .signup a, a:visited {
     color: #fff;
 }
-
+.signup input{
+	width: 100%;
+}
 .signup input[type="text"],
 .signup input[type="password"],
 .signup button,
@@ -2629,4 +2615,58 @@ html {
 	background-color: #fff !important;
 	text-decoration: none;
 	border-bottom: none !important;
+}
+
+.rmv_item{
+	z-index: 7;
+	background-color:rgb(151, 35, 35) !important;
+	color: white !important;
+	width: 35px;
+	height: 35px;
+	text-align: center;
+	right:0;
+}
+.rmv_item:hover{
+	cursor: pointer;
+}
+.notFound{
+	background-image: url('./src/assets/images/PageNotFound.png');
+	height: 100vh;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: absolute;
+	z-index: 10;
+	top: 0;
+	left:0;
+	height: 100%;
+	width: 100%;
+}
+.goToHome{
+	bottom: 50px !important;
+	left: 42% !important;
+	color: rgb(222, 197, 55);
+}
+.goToHome:hover{
+	cursor: pointer;
+}
+.logBTN {
+	text-decoration: underline;
+}
+.logBTN:hover{
+	cursor: pointer;
+	color: rgba(210, 140, 64, 0.634);
+	transition: 0.5s all;
+}
+.search{
+}
+.searchSelect{
+	font-size: 15px;
+	width: 250px !important;
+}
+.searchedCar article::before{
+	background-color: #2a2f4a!important;
+}
+.paymentForm {
+	background-color: #2a2f4a !important;
 }
